<resources>
    <string name="app_name">Campus Orders</string>
    <string name="title_home">Home</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_settings">Settings</string>
    <string name="seller">SELLER</string>
    <string name="buyer">BUYER</string>
    <string name="current_profile">Switch Profile</string>
    <string name="order_list_title">Order item from list below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password ...</string>
    <string name="enter_your_email">Enter your email ...</string>
    <string name="login">LOGIN</string>
    <string name="or">If you have no account, click Register</string>
    <string name="register">REGISTER</string>
    <string name="campus_order_it">Campus Orders</string>
    <string name="app_tag_line">Get it at your comfort</string>
    <string name="price_ksh">Price: Ksh.</string>
    <string name="order">ORDER</string>

    <string name="invitationMessage">"Share app with friends"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stats">Stats</string>
    <string name="orders">Orders</string>
    <string name="items">Items</string>
</resources>
